@@ -35,8 +35,6 @@ import org.apache.nifi.serialization.record.SchemaIdentifier;
 import org.apache.nifi.web.client.provider.api.WebClientServiceProvider;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.OptionalInt;
@@ -52,23 +50,24 @@ public class ApicurioSchemaRegistry extends AbstractControllerService implements
             SchemaField.SCHEMA_TEXT_FORMAT, SchemaField.SCHEMA_IDENTIFIER, SchemaField.SCHEMA_VERSION);
 
     static final PropertyDescriptor SCHEMA_REGISTRY_URL = new PropertyDescriptor.Builder()
-            .name("schema-registry-url")
+            .name("Schema Registry URL")
             .displayName("Schema Registry URL")
             .description("The URL of the Schema Registry e.g. http://localhost:8080")
             .addValidator(StandardValidators.URL_VALIDATOR)
             .required(true)
             .build();
     static final PropertyDescriptor CACHE_SIZE = new PropertyDescriptor.Builder()
-            .name("cache-size")
+            .name("Cache Size")
             .displayName("Cache Size")
-            .description("Specifies how many Schemas should be cached from the Schema Registry")
+            .description("Specifies how many Schemas should be cached from the Schema Registry. The cache size must be "
+                    + "a non-negative integer. When it is set to 0, the cache is effectively disabled.")
             .addValidator(StandardValidators.NON_NEGATIVE_INTEGER_VALIDATOR)
             .defaultValue("1000")
             .required(true)
             .build();
 
     static final PropertyDescriptor CACHE_EXPIRATION = new PropertyDescriptor.Builder()
-            .name("cache-expiration")
+            .name("Cache Expiration")
             .displayName("Cache Expiration")
             .description("Specifies how long a Schema that is cached should remain in the cache. Once this time period elapses, a "
                     + "cached version of a schema will no longer be used, and the service will have to communicate with the "
@@ -78,19 +77,19 @@ public class ApicurioSchemaRegistry extends AbstractControllerService implements
             .required(true)
             .build();
     public static final PropertyDescriptor WEB_CLIENT_PROVIDER = new PropertyDescriptor.Builder()
-            .name("web-client-service-provider")
+            .name("Web Client Service Provider")
             .displayName("Web Client Service Provider")
             .description("Controller service for HTTP client operations")
             .required(true)
             .identifiesControllerService(WebClientServiceProvider.class)
             .build();
 
-    private static final List<PropertyDescriptor> PROPERTIES = new ArrayList<>(Arrays.asList(
+    private static final List<PropertyDescriptor> PROPERTIES = List.of(
             SCHEMA_REGISTRY_URL,
             CACHE_SIZE,
             CACHE_EXPIRATION,
             WEB_CLIENT_PROVIDER
-    ));
+    );
 
 
     @Override
